--- a/BCA_Paper.Rmd
+++ b/BCA_Paper.Rmd
@@ -72,6 +72,8 @@ Assumptions:
 - *All transplants are successful* (find rates please)
 - Each patient who is offered a transplant due to the increase in kidney supply would have otherwise paid for dialysis until death. 
 - Patients who get a kidney transplant before dialysis generally live 10-15 years longer, from which we assume the average is 12.5 years (value from Beth Israel Deaconess Medical Center). 
+- Average survival time on dialysis is 44.55 months, meaning a transplant provides an additional 8.79 years of life.
+- The minimum value of each year of life provided due to a transplant is equal to the average cost of dialysis.
 
 $$ Life\ Savings\ Benefit = \widehat{LAT} * \widehat{\Delta T} * D_s $$
 
@@ -87,9 +89,15 @@ The Renal Dialysis Standard is a measure of the value of a statistical year of l
 [^1]: https://www.valueinhealthjournal.com/article/S1098-3015(10)60676-6/pdf?_returnURL=https%3A%2F%2Flinkinghub.elsevier.com%2Fretrieve%2Fpii%2FS1098301510606766%3Fshowall%3Dtrue
 [^2]: https://westegg.com/inflation/
 
-#### Estimate
+#### Minimum value provided by additional transplants
 
-$$  (162.4 * (1-0.246) * 281,640) = 34,486,705 $$
+This does not account for decreased quality of life, which would discount the total. We don't have an estimate for QALY for kidney transplants. 
+
+$$  (162.4 * (1-0.246)) * 129,090 * 8.97 = 141,788,959.21 $$
+
+#### Estimated change in consumer costs
+
+$$  (162.4 * (1-0.246) * 337,085) = 41,275,923.416 $$
 
 24.6% of prisoners are not viable donors based on this paper. Conservatively.
 https://www.bjs.gov/content/pub/pdf/mpsfpji1112.pdf
@@ -106,17 +114,22 @@ $$414,000 * 81 * 2 = 67,068,000$$
 $414,800 for a single kidney transplant.
 Based on the 2017 Milliman Report.
 
-### Reduction in cost to consumers
+### Change in cost to consumers
 
 Assuming:
-- The policy allows for 162 successful kidney transplants
-- In all cases the alternative would have been 10 years of dialysis at a cost of $129,000
+- The policy allows for 162 successful kidney transplants.
+- In all cases the alternative would have been an average of dialysis at a cost of $337,085 per life
 - The aggregate cost of the operations to consumers (as calculatd above) will be  $67,068,000
 
-$$129,000 * 162 * 10 - 67,068,000 = 141,912,000$$
+$$67,068,000 - 337,085 * 162 = 12,460,230$$
+
+We can multiply the 162 in this equation by the success rate of kidney transplants if that information becomes available. 
 
 ### Social Cost $\rho$
-Description: Cost to society in USD for involuntarily harvesting deceased prisoner’s organs without their consent. 
+Description: Cost to prisoners in USD for involuntarily harvesting deceased prisoner’s organs without their consent. 
+
+Assuming:
+- Survey data accurately represents cost to prisoners.
 
 $$Social\ Cost = \widehat{p(C)} * \bar{A_m} * \widehat{I_c} $$
 
@@ -138,11 +151,14 @@ $$ NB = \phi - \gamma - \rho$$
 
 #### Estimate
 
+The total cost to consumers will increase $12,460,230. 
+
 Assuming that prisoners have standing:
-$$34,486,705 + 141,912,000 - 49,826,150 = 126,572,555$$
+$$134,486,705 + 141,912,000 - 49,826,150 = 126,572,555$$
 
 Assuming that prisoners do not have standing:
 $$134,486,705 + 141,912,000 = 276,398,705$$
+
 
 ### Discounting 
 
